Fixed spacing issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@ body {
 
 #mainHeader {
 	background-image: url(../images/Grand-Central-Terminal-clock.jpg);
-	/*background-image: url(../../../../kievsky-railway-station.jpg);*/
 	background-size: 1150px;
 	color: yellow;
 	text-shadow: 2px 2px red;
@@ -15,4 +14,8 @@ label, #submit {
 	font-weight: bold;
 }
 
-
+/*.form-group {
+	margin: 0;
+	padding: 0;
+}
+*/
